# gestor_proyectos_db

./: .env.example  .gitignore  .railwayignore  Dockerfile  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_FIX.md  README.md  README_INTELLIGENT.md  TODO.md  app.py  app_unicode.py  build.sh  check_tables.py  database_monitor.py  database_reporter.py  debug_config.py  detect.py  intelligent_local_deploy.py  intelligent_master_deploy.py  intelligent_railway_deploy.py  main.py  manual_deploy.py  nixpacks.toml  nixpacks_alternative.toml  pyproject.toml  railpack.toml  railway.json  railway.toml  railway_app.py  railway_config.py  railway_db_deploy.py  railway_deploy.py  railway_deploy_unicode.py  railway_diagnostic.py  requirements.txt  requirements_intelligent.txt  schema_manager.py  setup.py  start.sh  (+1 more)
docs/: .gitkeep
sql/: 01_init_database.sql  02_create_procesos_table.sql  03_create_contratos_table.sql  04_create_views.sql  init_complete.sql
sql/migrations/: 001_create_procesos.sql  002_create_contratos.sql
src/: __init__.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  connection.py  postgis.py
src/models/: __init__.py  base.py  contrato.py  proceso.py
src/utils/: __init__.py  data_loader.py  database_health.py  database_repair.py  logger.py
tests/: .gitkeep
