[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestor-proyectos-db"
version = "1.0.0"
description = "Sistema Inteligente de Gestión de Base de Datos para Proyectos"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Sistema Inteligente", email = "sistema@inteligente.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "psycopg2-binary>=2.9.0",
    "python-dotenv==1.0.0",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "sqlalchemy==2.0.21",
    "geoalchemy2==0.14.1",
    "alembic==1.12.0",
    "click==8.1.7",
    "rich==13.6.0",
    "schedule>=1.1.0",
    "psutil>=5.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
railway-deploy = "railway_deploy:main"
intelligent-deploy = "intelligent_master_deploy:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "app_outputs*", "logs*"]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.txt", "*.md"]